# mensaparser

./: README.md  mensaparser.py  pyproject.toml  requirements.txt
