[tool.poetry]
name = "mensaparser"
version = "0.1.0"
description = "Tool for parsing food-plan of sw-ka.de"
authors = ["Dominik Rimpf <dev@d-rimpf.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
BeautifulSoup4 = "^4.8.2"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
